fix(layout): add display contents when collapseVisible is not false

--- a/src/layout/styles/layout.scss
+++ b/src/layout/styles/layout.scss
@@ -141,7 +141,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        display: contents;
+        // display: contents;
     }
 
     .thy-resizable-resizing {
